STYLE: Modified description in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ if(NOT Slicer_SOURCE_DIR)
   set(EXTENSION_HOMEPAGE "http://www.slicer.org/slicerWiki/index.php/Documentation/4.2/Extensions/TrackerStabilizer")
   set(EXTENSION_CATEGORY "IGT")
   set(EXTENSION_CONTRIBUTORS "Laurent Chauvin (SNR), Jayender Jagadeesan (SPL)")
-  set(EXTENSION_DESCRIPTION "This is an example of extension bundling a loadable module")
+  set(EXTENSION_DESCRIPTION "This loadable module is a tool to filter, using a low-pass filter, data coming from trackers")
   set(EXTENSION_ICONURL "http://viewvc.slicer.org/viewvc.cgi/Slicer4/trunk/Extensions/Testing/TrackerStabilizer/Resources/Icons/TrackerStabilizer.png?revision=19437&view=co")
   set(EXTENSION_SCREENSHOTURLS "http://wiki.slicer.org/slicerWiki/images/4/42/Slicer-r19441-TrackerStabilizer-screenshot.png")
 endif()
